# pywafo

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py
_examples/: kdetoolst.py  runtestforwafo.py
src/wafo/: __init__.py  containers.py  integrate.py  interpolate.py  misc.py  objects.py  polynomial.py
src/wafo/covariance/tests/: test_covariance.py
src/wafo/doc/tutorial_scripts/: chapter3.py
src/wafo/kdetools/: gridding.py  kdetools.py  kernels.py
src/wafo/kdetools/tests/: test_gridding.py  test_kdetools.py  test_kernels.py
src/wafo/spectrum/: core.py  models.py
src/wafo/spectrum/tests/: test_specdata1d.py
src/wafo/stats/: _continuous_distns.py  _distn_infrastructure.py  core.py  distributions.py  estimation.py
src/wafo/tests/: test_integrate.py  test_integrate_oscillating.py
src/wafo/transform/: core.py  estimation.py  models.py
