[tool.poetry]
name = "pywafo-finewind"
version = "0.1.1"
description = "An attempt to get and keep pywafo running with py3.10 and higher."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
scipy = "^1.10.1"
mpmath = "^1.2.1"
numba = "^0.56.4"

[tool.poetry.dev-dependencies]

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools>=42,<60", "setuptools_scm[toml]>=3.4", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"
