[tool.poetry]
name = "wafo"
version = "0.1.1"
description = "An attempt to get and keep pywafo running with py3.10 and higher."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "wafo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
scipy = "^1.14.1"
mpmath = "^1.2.1"
numba = "*"  #^0.56.4"
setuptools = "*" #"<60"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
build = "^1.2.2"
numdifftools = "^0.9.41"
llvmlite = "^0.43.0"

[tool.poetry.dev-dependencies]

# [build-system]


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#requires = ["setuptools>=42,<60", "setuptools_scm[toml]>=3.4", "oldest-supported-numpy"]
#requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4", "oldest-supported-numpy"]
#build-backend = "setuptools.build_meta"
